--- a/todoapp/templates/todoapp/todo_list.html
+++ b/todoapp/templates/todoapp/todo_list.html
@@ -1,83 +1,21 @@
-<!doctype html>
-<html lang="de">
-    <head>
-        <title>{% block title %}Todo{% endblock title %}</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+{% extends "todoapp/todo_base.html" %}
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-    </head>
+{% block title %}Todo-Liste{% endblock title %}
+                        
 
-    <body>
-        <header>
-            <!-- place navbar here -->
-            <div class="container bg-primary text-white shadow">
-                <div class="row">
-                    <div class="display-4 col ">{% block Ueber %}ToDo-Liste{% endblock Ueber %}</div>
-                    <a
-                        name=""
-                        id=""
-                        target = "_blank"
-                        class="btn btn-outline-dark col m-2 align-middle shadow"
-                        href="/admin/todoapp/eintrag/add/"
-                        role="button"
-                        >Neu</a
-                    >
-                    <a
-                        name=""
-                        id=""
-                        target = "_blank"
-                        class="btn btn-outline-dark col m-2 shadow"
-                        href="/admin/"
-                        role="button">
-                        {% block user %}Moerle{% endblock user %}
-                    </a>                    
-                </div>
-            </div>
-        </header>
-        <main>
-            {% block content %}
-            <div class="container">
-                {% for eintrag in liste %}
-                    <div class="row border border-primary rounded m-3 shadow">
-                        <div class="col-10 display-6 ">
-                            <input type="checkbox" name="" id="" class="col-2 align-middle display-6">
-                            {{eintrag.content}}
-                        </div>
-                    </div>
-                {% endfor %}
-                <a name="" id="" class="btn btn-outline-primary col m-3 shadow d-flex justify-content-center" href="#" role="button">Speichern</a>                 
-            </div>
-        	{% endblock content %}
-        </main>
-        <footer>
-            <!-- place footer here -->
-            <div class="container bg-primary text-white shadow">
-                <div class="row">
-                    <div class="display-6 col ">&copy; Moerlisoft 2024</div>
-            </div>
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+{% block user %}{{user}}{% endblock user %}
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-    </body>
-</html>
+{% block content %}
+<div class="container">
+    {% for eintrag in liste %}
+        <div class="row border border-primary rounded m-3 shadow">
+            <div class="col-10 display-6 ">
+                <input type="checkbox" name="" id="" class="col-2 align-middle display-6">
+                {{eintrag.content}}
+            </div>
+        </div>
+    {% endfor %}
+    <a name="" id="" class="btn btn-outline-primary col m-3 shadow d-flex justify-content-center" href="#" role="button">Speichern</a>                 
+</div>
+{% endblock content %}
+ 
